Neural Network integration. Please not this neural network trainer will not be effective in current implementation and is demonstrative for later refactor only.

--- a/ContractWhist/ContractWhist.csproj
+++ b/ContractWhist/ContractWhist.csproj
@@ -11,6 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\NeuralNetworkLib\NeuralNetworkLib.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="MLModel.zip">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
